--- a/config.gradle
+++ b/config.gradle
@@ -24,6 +24,7 @@ ext {
 
             "androidx-core-ktx"          : "androidx.core:core-ktx:1.3.2",
             "lifecycle-viewmodel-ktx"    : "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0",
+            "lifecycle-extensions"       : "androidx.lifecycle:lifecycle-extensions:2.2.0",
             "lifecycle-runtime-ktx"      : "androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-rc01",
             "lifecycle-livedata-ktx"     : "androidx.lifecycle:lifecycle-livedata-ktx:2.3.0-rc01",
             "lifecycle-compiler"         : "androidx.lifecycle:lifecycle-compiler:2.1.0",
