--- a/view/src/main/AndroidManifest.xml
+++ b/view/src/main/AndroidManifest.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.zoyo.view">
 
     <application>
-        <activity android:name=".CanvasActivity" />
+        <activity android:name=".CustomViewActivity"
+            tools:ignore="Instantiatable" />
     </application>
 
 </manifest>
